add logic and apis to create / get file docs
